fix header alignment

--- a/_less/header.less
+++ b/_less/header.less
@@ -1,6 +1,12 @@
 header {
   height: 377px;
   position: relative;
+  .logo {
+    margin: 0 auto;
+    width: 1280px;
+    height: 300px;
+    position: relative;
+  }
   h1 {
     text-indent: -9999px;
     margin-top: 0;
